typescript/checker/tests/conformance/expressions/commaOperator/commaOperatorOtherInvalidOperation.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            165,
        ),
        hi: BytePos(
            166,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/commaOperator/commaOperatorOtherInvalidOperation.ts:6:15
  |
6 |     return x, y;
  |               ^

error: NoCallSignature {
    span: Span {
        lo: BytePos(
            199,
        ),
        hi: BytePos(
            202,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/commaOperator/commaOperatorOtherInvalidOperation.ts:8:30
  |
8 | var resultIsString: number = foo(1, "123"); //error here
  |                              ^^^

